Clear TODOs, update GUI and refactoring - Remove: all leftover TODOs from initial commit - Fix: Remove self written `render_template` and replace it with flasks own `render_template` - UI-Change: Set width of spacing equal to card width - Remove: `.content-centered-sixty-percent-width` is not being used anymore - Remove: `TsViewerClient.update()` and `MoverDecorator.do_update()` - Fix: `TsViewerClient.get_client_id_list()` uses `Configuration.USER` instead of `serveradmin` now - Add: A new parameter `filter_by` in `TsViewerClient.get_channel_id_list()`

--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,7 @@ body {
 .header {
   grid-area: head;
 }
+
 .nav {
   grid-area: nav;
 }
@@ -37,11 +38,7 @@ body {
     text-align: center;
 }
 
-.content-centered-sixty-percent-width {
-    margin: auto;
-    width: 60%;
-    display: block;
-}
+
 
 
 
